--- a/client/views/perfil-juridica-novo.html
+++ b/client/views/perfil-juridica-novo.html
@@ -55,7 +55,7 @@
                         <label for="telefones">
                             Telefone
                         </label>
-                        <input type="text" ng-model="pessoa.telefones" mask="(99) 9999-9999" class="form-control" id="telefones" placeholder="Ex. (99) 9999-9999"/>
+                        <input type="text" ng-model="pessoa.telefones" mask="(99) 9999-9999" clean="true" class="form-control" id="telefones" placeholder="Ex. (99) 9999-9999"/>
                     </div>
 
                 </div>
@@ -83,7 +83,6 @@
                             <input type="password" ng-model="pessoa.confirmaSenha" class="form-control" id="confirmaSenha" placeholder="Repita sua senha"/>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
             <!-- Botões -->
