--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -17,7 +17,7 @@
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-        <table class="table table-striped table-hover" ng-init="listar()">
+        <table class="table table-striped table-hover" ng-init="listarAbertos()">
             <thead>
                 <tr>
                     <th>Categoria</th>
@@ -103,11 +103,46 @@
 
             <div class="form-group">
                 <div class="row">
+                    <label for="end_rua">
+                            Logradouro
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.logradouro" class="form-control" id="end_rua" placeholder="Ex.: Rua Exemplo" readonly/>
+                    </div>
                     <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <label for="end_rua">
-                            Endereço
+                            Numero
                         </label>
-                        <input type="text" ng-model="leilao.endereco" class="form-control" id="end_rua" readonly="true"/>
+                        <input type="text" ng-model="leilao.endereco.numero" class="form-control" id="end_rua" placeholder="Ex.: xxx" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Complemento
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.complemento" class="form-control" id="end_rua" placeholder="Ex.: AP XX" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Cidade
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.cidade" class="form-control" id="end_rua" placeholder="Ex.: São Paulo" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            UF
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.uf" class="form-control" id="end_rua" placeholder="Ex.: SP" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            CEP
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" placeholder="Ex.: 000.000-00" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Observacao
+                        </label>
+                        <input type="text" ng-model="leilao.endereco.Observacao" class="form-control" id="end_rua" placeholder="Ex.: Deve ter tal coisa" readonly/>
                     </div>
 
                 </div>
