--- a/client/views/logon/login.html
+++ b/client/views/logon/login.html
@@ -12,7 +12,8 @@
         <form role="form" method="POST">
             
 
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    </style>
                         <label for="username">
                            Usuário
                         </label>
@@ -25,7 +26,7 @@
 
             <div class="form-group">
                 <div class="row">
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <label for="senha">
                             Senha
                         </label>
