--- a/client/views/meus-lances.html
+++ b/client/views/meus-lances.html
@@ -51,19 +51,19 @@
         <form role="form" style="padding-top: 10px;">
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <label for="data_exec">
                             Data de Inicio
                         </label>
                         <input type="text" ng-model="lance.leilao.dataHoraInicio" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <label for="data_exec">
                             Data da Execução
                         </label>
                         <input type="text" ng-model="lance.leilao.dataHoraExecucao" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <label for="data_limite">
                             Data Limite dos Lances
                         </label>
@@ -85,18 +85,55 @@
 
             <div class="form-group">
                 <div class="row">
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
                         <label for="end_rua">
-                            Endereço
+                            Logradouro
                         </label>
-                        <input type="text" ng-model="lance.leilao.endereco" class="form-control" id="end_rua" readonly="true"/>
+                        <input type="text" ng-model="lance.leilao.endereco.logradouro" class="form-control" id="end_rua" readonly="true"/>
                     </div>
+                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Numero
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.numero" class="form-control" id="end_rua" readonly="true"/>
+                    </div>
+                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Complemento
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.complemento" class="form-control" id="end_rua" placeholder="Ex.: AP.704" readonly="true"/>
+                    </div>
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Cidade
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.cidade" class="form-control" id="end_rua" readonly="true"/>
+                    </div>
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            UF
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.uf" class="form-control" id="end_rua" placeholder="Ex.: SP" readonly/>
+                    </div>
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            CEP
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.cep" class="form-control" id="end_rua" placeholder="Ex.: 000.000-00" readonly/>
+                    </div>
+                    <div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Observacao
+                        </label>
+                        <input type="text" ng-model="lance.leilao.endereco.Observacao" class="form-control" id="end_rua" placeholder="Ex.: Deve ter tal coisa" readonly/>
+                    </div>
+
                 </div>
             </div>
+
         </form>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-            <button type="button" ng-click="deletar(value)" class="btn btn-sm btn-danger"><span class="glyphicon glyphicon-erase"></span> EXCLUIR</button>
         </div>
     </div>
 </div>
