--- a/client/css/estilos.css
+++ b/client/css/estilos.css
@@ -77,3 +77,31 @@ h3,h1{
 *{
     font-family: helvetica;
 }
+
+#form_login{
+                background-color: #ffffff; 
+                width: 400px; 
+                height: 150px; 
+                left: 35%;
+                position: absolute; 
+                top: 50%;
+                text-align: center;
+}
+
+#logout{
+    color: #d75a4a;
+    padding-right: 15px;
+    padding-top: 10px;
+}
+
+#login{
+    color: #91dc5a;
+    padding-right: 15px;
+    padding-top: 10px;
+}
+
+#logon{
+    color: #006df0;
+    padding-right: 15px;
+    padding-top: 10px;
+}
