--- a/client/views/leilao-novo.html
+++ b/client/views/leilao-novo.html
@@ -97,7 +97,7 @@
                         <label for="end_rua">
                             CEP
                         </label>
-                        <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" placeholder="Ex.: 000.000-00"/>
+                        <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" mask="999.999-99" placeholder="Ex.: 000.000-00"/>
                     </div>
                     <div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <label for="end_rua">
