--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -165,9 +165,10 @@
                     <input type="text" ng-model="lance.valor" class="form-control" id="valor_lance" placeholder="Ex.: 300,00"/>
                 </form>
             </div>
-
-            <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
-            <button type="button" ng-click="cadastrarLance(lance, leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span> Salvar Lance</button>
+            <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-top:10px;">
+                <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
+                <button type="button" ng-click="cadastrarLance(lance, leilao)" class="btn btn-success"><span class="glyphicon glyphicon-save"></span> Salvar Lance</button>
+            </div>
         </div>
 
     </div>
