--- a/client/views/leiloes-leiloes.html
+++ b/client/views/leiloes-leiloes.html
@@ -100,52 +100,79 @@
                 </div>
             </div>
             <div class="form-group">
-                 <div class="row">
-                    <label for="end_rua">
+                <div class="row">
+                    <div class=" col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <label for="end_rua">
                             Logradouro
                         </label>
-                        <input type="text" ng-model="leilao.endereco.logradouro" class="form-control" id="end_rua" placeholder="Ex.: Rua Exemplo" readonly/>
+                        <input type="text" ng-model="leilao.endereco.logradouro" class="form-control" id="end_rua" placeholder="Ex.: Rua Exemplo" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             Numero
                         </label>
-                        <input type="text" ng-model="leilao.endereco.numero" class="form-control" id="end_rua" placeholder="Ex.: xxx" readonly/>
+                        <input type="text" ng-model="leilao.endereco.numero" class="form-control" id="end_rua" placeholder="Ex.: xxx" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             Complemento
                         </label>
-                        <input type="text" ng-model="leilao.endereco.complemento" class="form-control" id="end_rua" placeholder="Ex.: AP XX" readonly/>
+                        <input type="text" ng-model="leilao.endereco.complemento" class="form-control" id="end_rua" placeholder="Ex.: AP XX" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             Cidade
                         </label>
-                        <input type="text" ng-model="leilao.endereco.cidade" class="form-control" id="end_rua" placeholder="Ex.: São Paulo" readonly/>
+                        <input type="text" ng-model="leilao.endereco.cidade" class="form-control" id="end_rua" placeholder="Ex.: São Paulo" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             UF
                         </label>
-                        <input type="text" ng-model="leilao.endereco.uf" class="form-control" id="end_rua" placeholder="Ex.: SP" readonly/>
+                        <input type="text" ng-model="leilao.endereco.uf" class="form-control" id="end_rua" placeholder="Ex.: SP" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             CEP
                         </label>
-                        <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" placeholder="Ex.: 000.000-00" readonly/>
+                        <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" mask="999.999-99" placeholder="Ex.: 000.000-00" readonly="true"/>
                     </div>
-                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12">
                         <label for="end_rua">
                             Observacao
                         </label>
-                        <input type="text" ng-model="leilao.endereco.Observacao" class="form-control" id="end_rua" placeholder="Ex.: Deve ter tal coisa" readonly/>
+                        <input type="text" ng-model="leilao.endereco.Observacao" class="form-control" id="end_rua" placeholder="Ex.: Deve ter tal coisa" readonly="true"/>
                     </div>
-
+                    
                 </div>
-            </div>  
+            </div>
+            
+            
+                <div class="row" ng-show="leilao.encerrado == true">
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <label for="end_rua">
+                            Vencedor
+                        </label>
+                        <input type="text" ng-model="leilao.vencedor.interessado.nome" class="form-control" id="end_rua" readonly/>
+                    </div>
+                    <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <label for="end_rua">
+                            Valor
+                        </label>
+                        <input type="text" ng-model="leilao.vencedor.valor" class="form-control" id="end_rua" readonly/>
+                </div>
+                </div>
+                
+            <div class="row" style="padding-top:10px;">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
+                </div>
+            </div>
+                
+                
+            </div> 
+        
         </form>
-        <button type="button" ng-click="removeInfo()" class="btn btn-warning"><span class="glyphicon glyphicon-menu-left"></span> Voltar</button>
+
     </div>
 </div>
