--- a/client/views/logon/login.html
+++ b/client/views/logon/login.html
@@ -9,31 +9,27 @@
 <div class="container col-xs-12 col-lg-12 col-md-12 col-sm-12" style="margin-top: 10px;">
     <div class="row">
         <!-- Formulário -->
-        <form role="form" method="POST">
+        <form role="form" method="POST" id="form_login">
             
-
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                    </style>
-                        <label for="username">
-                           Usuário
-                        </label>
-
-                        <input type="text" ng-model="pessoa.username" class="form-control" id="username" placeholder="Usuário"/>  
-
-
-                    </div>
-                  
+ 
 
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        </style>
+                            <label for="username">
+                               Usuário
+                        </label>
+                        <input type="text" ng-model="pessoa.username" class="form-control" id="username" placeholder="Usuário"/>  
+                    </div>
+                </div> 
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <label for="senha">
                             Senha
                         </label>
                         <input type="password" ng-model="pessoa.senha" class="form-control" id="senha" placeholder="Senha"/>
                     </div>
-                    
-        
                 </div>
             </div>
             <!-- Botões -->
