--- a/client/views/perfil.html
+++ b/client/views/perfil.html
@@ -1,7 +1,7 @@
 <!-- Cabeçalho da Janela -->
 <div class="row" id="cabPag">
     <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
-        <h1 style="text-align: center">Perfil Pessoa Física</h1>
+        <h1 style="text-align: center">Perfil</h1>
     </div>
 </div>
 
@@ -10,16 +10,7 @@
         <form role="form" method="POST" >
             <div class="form-group">
                 <div class="row" ng-init="buscar();">
-                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                        <label for="pessoa">
-                            Pessoa <br>
-                        </label>
-                        <div>
-                            <input type="radio" name="op" id="op1" checked onclick="location.href = '#/perfil'"> Física
-                            <input type="radio" name="op" id="op2" onclick="location.href = '#/perfil-juridica'"> Jurídica
-                        </div>
-                    </div>
-                    <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                         <label for="nome">
                             Nome
                         </label>
