--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -65,21 +65,21 @@
 
             <div class="form-group">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <label for="data_exec">
                             Data de Inicio
                         </label>
                         <input type="text" ng-model="leilao.dataHoraInicio" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <label for="data_exec">
                             Data da Execução
                         </label>
                         <input type="text" ng-model="leilao.dataHoraExecucao" class="form-control" id="data_exec" readonly="true"/>                        
                     </div>
 
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                         <label for="data_limite">
                             Data Limite dos Lances
                         </label>
@@ -102,46 +102,55 @@
 
 
             <div class="form-group">
+                 
+                    <hr size=4>
+               <b>Endereço</b><br>
                 <div class="row">
-                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                    <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             Logradouro
                         </label>
                         <input type="text" ng-model="leilao.endereco.logradouro" class="form-control" id="end_rua" placeholder="Ex.: Rua Exemplo" readonly/>
                     </div>
-                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                   <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             Numero
                         </label>
                         <input type="text" ng-model="leilao.endereco.numero" class="form-control" id="end_rua" placeholder="Ex.: xxx" readonly/>
                     </div>
-                    <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                   <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             Complemento
                         </label>
                         <input type="text" ng-model="leilao.endereco.complemento" class="form-control" id="end_rua" placeholder="Ex.: AP XX" readonly/>
                     </div>
-                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                   <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             Cidade
                         </label>
                         <input type="text" ng-model="leilao.endereco.cidade" class="form-control" id="end_rua" placeholder="Ex.: São Paulo" readonly/>
                     </div>
-                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                  <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             UF
                         </label>
                         <input type="text" ng-model="leilao.endereco.uf" class="form-control" id="end_rua" placeholder="Ex.: SP" readonly/>
                     </div>
-                    <div class=" col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                 <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
                         <label for="end_rua">
                             CEP
                         </label>
                         <input type="text" ng-model="leilao.endereco.cep" class="form-control" id="end_rua" placeholder="Ex.: 000.000-00" readonly/>
                     </div>
-                    <div class=" col-lg-6 col-md-12 col-sm-12 col-xs-12">
+                    
+                        <div class=" col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                       <hr size=4>
+                           </div>
+                   <div class=" col-lg-4 col-md-6 col-sm-4 col-xs-4">
+                     
                         <label for="end_rua">
-                            Observacao
+                            
+                            Observação
                         </label>
                         <input type="text" ng-model="leilao.endereco.Observacao" class="form-control" id="end_rua" placeholder="Ex.: Deve ter tal coisa" readonly/>
                     </div>
