--- a/client/views/sobre.html
+++ b/client/views/sobre.html
@@ -1,7 +1,11 @@
 <h1 id="msg">Sistema de Leilão de Serviços</h1>
-<h3 id="msg">Trabalho acadêmico desenvolvido para a cadeira de Projeto em Desenvolvimento ADS 2016/1</h3>
-<h1 id="msg">Desenvolvido Pelos Alunos</h1>
-<h3 id="msg">Allisson Dedigo</h3>
-<h3 id="msg">Eduardo Souza</h3>
-<h3 id="msg">Gabriel Schaidhauer</h3>
+
 <h3 id="msg">Rafael Dorneles</h3>
+
+
+<a id="diff-date" class="btn btn-large btn-primary" href="#">Date <i class="icon-calendar icon-white"></i></a>
+
+<label>Datum:</label>
+<div id="datum" class="input-append">
+     <input data-format="dd-MM-yyyy" type="text" name="datum" placeholder="Kies een     datum..." /><span class="add-on"><i data-date-icon="icon-calendar"></i></span>
+</div>
