--- a/client/css/estilos.css
+++ b/client/css/estilos.css
@@ -59,7 +59,7 @@ and open the template in the editor.
 }
 
 #cabPag{
-    background-color: gray;
+    background-color: #96CDCD;
     color: white;
 }
 
