--- a/client/views/leiloes-abertos.html
+++ b/client/views/leiloes-abertos.html
@@ -23,17 +23,22 @@
                     <th>Categoria</th>
                     <th>Descrição</th>
                     <th>Ação</th>
+                    <th>Termina em</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="(key, value) in lista | filter: pesquisa">
                     <td>{{opCategorias.find(value.categoria).text}}</td>
                     <td>{{value.descricao}}</td>
+                    
                     <th>
                         <button type="button" ng-click="setInfo(value)" class="btn btn-sm btn-primary" alt="Editar" title="Editar">
                             <span class="glyphicon glyphicon-plus-sign"></span> MAIS
                         </button>
                     </th>
+                    <td>
+                        <input type="text" ng-model="leilao.dataHoraFinal" class="form-control" id="data_limite" readonly="true"/>                        
+                        {{value.descricao}}</td>
                 </tr>
             </tbody>
         </table>
